--- a/FormPromocion.html
+++ b/FormPromocion.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Verificacion de edad</h2>
-    <form action="convertir.php" method="post">
+    <form action="Promocion.php" method="post">
         <label for="pesos">Ingrese su edad</label>
         <input type="number" id="edad" name="edad" step="0.01" required>
         <button type="submit">Verificar</button>
